# pyconlang

./: .gitignore  Makefile  README.md  diagrams.html  pyproject.toml  thoughts.txt
pyconlang/: __init__.py  cache.py  checksum.py  cli.py  config.py  domain.py  errors.py  evolve.py  ipa.py  lexurgy.py  metadata.py  old_parser.py  parser.py  repl.py  strings.py  translate.py  types.py  unicode.py
pyconlang/assets/: __init__.py
pyconlang/assets/sample/: changes.lsc  grammar.md  lexicon.md  pyconlang.toml  template.html
pyconlang/assets/sample/assets/: style.css
pyconlang/assets/sample/src/: book.out.md  layout.html  lexicon.pycl
pyconlang/assets/template/: book.md  lexicon.md  template.html
pyconlang/book/: __init__.py  abbreviation.py  any_table_header.py  block.py  inline.py  lexicon_inserter.py  multi.py  preprocess.py  ruby.py  skipline.py  span_table.py  unicode.py
pyconlang/book/conlang/: __init__.py  advanced_macros.py  batching_macros.py  before_after_macros.py  conlang_macro.py  dictionary.py  raw_macros.py
pyconlang/data/: __init__.py
pyconlang/data/book/: book.md  changes.lsc  description.md  lexicon.md
pyconlang/data/sample/: book.md  description.md  djp_template.pages  lexicon.txt
pyconlang/evolve/: __init__.py  arrange.py  batch.py  domain.py  errors.py  tracer.py  tuple_mapping_view.py  types.py
pyconlang/lexicon/: __init__.py  domain.py  errors.py  old_parser.py  parser.py
pyconlang/lexurgy/: __init__.py  client.py  domain.py  errors.py  parser.py  tracer.py
pyconlang/pyrsec/: __init__.py  core.py  forward.py  functions.py  strings.py
stubs/watchdog/: events.pyi  observers.pyi
stubs/wcwidth/: __init__.py  __init__.pyi
tests/: __init__.py  conftest.py  test_book.py  test_cache.py  test_config.py  test_evolve.py  test_join_tree.py  test_lexurgy.py  test_metadata.py  test_old_parser.py  test_parser.py  test_path_cached_property.py  test_pyrsec.py  test_repl.py
tests/evolve/: conftest.py  test_arranger.py  test_batch.py  test_evolve.py  test_tracer.py
tests/lexicon/: conftest.py  test_lexicon.py  test_old_parser.py  test_parser.py
tests/lexurgy/: conftest.py  test_lexurgy.py  test_tracer.py
