[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyconlang"
description = "Python utility for conlanging"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["conlang", "conlanging"]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "Markdown==3.4.1",
    "mdx-include==1.4.2",
    "prompt-toolkit==3.0.30",
    "watchdog==2.1.9",
    "click==8.1.3",
    "toml==0.10.2",
    "pyparsing==3.0.9",
    "unidecode==1.3.4"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy==0.971",
    "types-Markdown==3.4.0",
    "types-toml==0.10.2",
    "black==22.6.0",
    "isort==5.10.1",
    "autoflake==1.4",
    "pytest==7.1.2",
    "pyparsing[diagrams]==3.0.9"
]

[project.scripts]
pyconlang = "pyconlang.cli:run"

[tool.setuptools.packages.find]
include = ["pyconlang*"]

[tool.setuptools.dynamic]
version = { attr = "pyconlang.__version__" }

[tool.setuptools.package-data]
pyconlang = ["data/**/*"]

[tool.mypy]
mypy_path = "stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.black]
extend-exclude = ".env"

[tool.isort]
profile = "black"
src_paths = ["pyconlang", "tests"]
skip = [".env"]
