[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyconlang"
description = "Python utility for conlanging"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["conlang", "conlanging"]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "Markdown==3.4.1",
    "mdx-include==1.4.2",
    "pymdown-extensions==9.9.2",
    "prompt-toolkit==3.0.30",
    "watchdog==2.1.9",
    "click==8.1.3",
    "toml==0.10.2",
    "unidecode==1.3.4",
    "wcwidth==0.2.5",
    "dataclasses-json==0.5.8",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy==1.1.1",
    "types-Markdown==3.4.2.5",
    "types-toml==0.10.8.5",
    "black==23.1.0",
    "isort==5.12.0",
    "autoflake==2.0.2",
    "pytest==7.2.2",
    "pytest-cov==4.1.0",
    "vulture==2.7",
    "pytest-xdist==3.3.1",
]

[project.scripts]
pyconlang = "pyconlang.cli:run"

[tool.setuptools.packages.find]
include = ["pyconlang*"]

[tool.setuptools.dynamic]
version = { attr = "pyconlang.__version__" }

[tool.setuptools.package-data]
pyconlang = ["assets/**/*"]

[tool.mypy]
mypy_path = "stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.black]
extend-exclude = ".venv"

[tool.isort]
profile = "black"
src_paths = ["pyconlang", "tests"]
skip = [".venv"]

[tool.autoflake]
recursive = true
exclude = [".venv"]
remove_unused_variables = true
remove_all_unused_imports = true
expand_star_imports = true
in_place = true

[tool.pytest.ini_options]
addopts = "-q"

